[package]
name = "actix"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
json = "0.12.4"
serde = { version = "1.0.204", features = ["derive"] }
uuid = "1.10.0"
validator = { version = "0.18.1", features = ["derive"] }
dotenv = "0.15.0"
sqlx = { version = "0.6.2", features = ["runtime-async-std-native-tls", "postgres"] }